force-app/main/default/objects/ClassCapacity__c/ClassCapacity__c.object-meta.xml
<CustomObject>
    <description>NDM: Class capacity/ enrolment year</description>
    <label>Class Capacity</label>
    <nameField>
        <label>Class Capacity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Capacities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>