force-app/main/default/objects/ClassCapacity__c/fields/CapacityAvailable__c.field-meta.xml
<CustomField>
    <fullName>CapacityAvailable__c</fullName>
    <formula>CapacityTotal__c - CapacityUsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>