force-app/main/default/objects/ClassCapacity__c/fields/CapacityTotal__c.field-meta.xml
<CustomField>
    <fullName>CapacityTotal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Capacity Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>