force-app/main/default/objects/ClassCapacity__c/fields/CurrentYear__c.field-meta.xml
<CustomField>
    <fullName>CurrentYear__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Current Year</label>
    <type>Checkbox</type>
</CustomField>