force-app/main/default/objects/ClassCapacity__c/fields/EnrolmentYear__c.field-meta.xml
<CustomField>
    <fullName>EnrolmentYear__c</fullName>
    <formula>IF((NOT(ISBLANK(StartDate__c)) &amp;&amp; NOT(ISBLANK(EndDate__c))), (TEXT(YEAR(StartDate__c)) +&quot;/&quot;+TEXT(YEAR(EndDate__c))), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolment Year</label>
    <type>Text</type>
</CustomField>