force-app/main/default/objects/ClassCapacity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>CapacityUsed__c</columns>
    <columns>CapacityTotal__c</columns>
    <columns>EnrolmentYear__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>CurrentYear__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>